--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Sm4sh</string>
+    <string name="FilterDesc">filters</string>
+    <string name="product_image">Product image</string>
+    <string name="total_format">All (%d)</string>
+    <string name="popular_format">Popular (%d)</string>
+    <string name="new_format">New (%d)</string>
+    <string name="sku_format">SKU: %s</string>
+    <string name="number_format">%,d downloads</string>
+    <string name="money_format">$%s</string>
+    <string name="games">Games</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
