--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,9 @@
     <string name="popular_format">Popular (%d)</string>
     <string name="new_format">New (%d)</string>
     <string name="sku_format">SKU: %s</string>
-    <string name="number_format">%,d downloads</string>
+    <string name="number_format">%d downloads</string>
     <string name="money_format">$%s</string>
     <string name="games">Games</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="share">share</string>
+    <string name="dot">dot</string>
 </resources>
